# mcp_searxng_search

./: README.md  pyproject.toml
src/mcp_searxng_search/: __init__.py  __main__.py  server.py
